@@ -75,7 +75,7 @@ check:
 		echo "***************************************************************************" ; \
 		exit 1 ; \
 	fi
-	@echo Number of application/ mime-types: `grep "mime-type type=" $(srcdir)/freedesktop.org.xml.in | grep "application/" | grep -v "octet-stream" | wc -l` ; \
+	@echo Number of mime-types that might need generic-icon: `grep "mime-type type=" $(srcdir)/freedesktop.org.xml.in | grep -v video/ | grep -v image/ | grep -v text/ | grep -v audio/ | grep -v "octet-stream" | wc -l` ; \
 	echo Number of mime-types with a generic icon: `grep "generic-icon name=" $(srcdir)/freedesktop.org.xml.in | wc -l` ;
 	
 
